# arpeggio-cli

./: Cargo.toml  README.md
.github/workflows/: build-and-test.yml  distribute.yml  publish.yml
src/: main.rs
src/cli/: mod.rs
src/cli/bounded_context/: mod.rs
src/cli/bounded_context/adapters/: mod.rs
src/cli/bounded_context/adapters/presenters/: add_aggregate_presenter.rs  add_component_presenter.rs  create_bounded_context_presenter.rs  find_bounded_contexts_presenter.rs  mod.rs
src/cli/bounded_context/application/: mod.rs
src/cli/bounded_context/application/commands/: add_aggregate_use_case.rs  add_component_use_case.rs  create_bounded_context_use_case.rs  mod.rs
src/cli/bounded_context/application/queries/: find_bounded_contexts_use_case.rs  mod.rs
src/cli/bounded_context/domain/: mod.rs
src/cli/bounded_context/domain/entities/: aggregate.rs  bounded_context.rs  mod.rs
src/cli/bounded_context/domain/enums/: aggregate_layer_component.rs  aggregate_layer_name.rs  component_type.rs  layer_name.rs  mod.rs
src/cli/bounded_context/domain/repositories/: mod.rs  (+2 more)
src/cli/bounded_context/infrastructure/: mod.rs
src/core/: mod.rs
src/core/adapters/: controller.rs
src/core/application/: mod.rs  use_case_input_port.rs  use_case_output_port.rs
src/core/domain/: mod.rs
src/core/domain/events/: domain_event.rs  domain_event_bus.rs  domain_event_subscriber.rs  mod.rs
src/core/domain/models/: aggregate_root.rs  date_value_object.rs  entity.rs  identity_object.rs  mod.rs  value_object.rs
src/core/infrastructure/: in_memory_domain_event_bus.rs  mod.rs
(+13 files in other folders)
