[package]
name = "arpeggio-cli"
version = "0.0.2"
edition = "2021"
authors = ["Isaac Herrera <isaacdecoded@gmail.com>"]
description = "CLI for Arpeggio-based projects"
repository = "https://github.com/isaacdecoded/arpeggio-cli"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.78"
anyhow = "1.0"
chrono = "0.4.35"
clap = { version = "4.0", features = ["derive"] }
dialoguer = "0.11.0"
env_logger = "0.11.3"
log = "0.4.21"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
