[package]
name = "arpeggio"
version = "1.0.1"
edition = "2021"
authors = ["Isaac Herrera <isaacdecoded@gmail.com>"]
description = "CLI for managing Arpeggio-based projects"
repository = "https://github.com/isaacdecoded/arpeggio-cli"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.78"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
dialoguer = "0.11.0"
log = "0.4.21"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
thiserror = "1.0.58"
